--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="imges/iconTemp.jpg">
     <meta name="description" content="agancy ">
 
-    <title>Agency Web - Landing page </title>
+    <title>MDub Design - Home page </title>
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
