--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="imges/iconTemp.jpg">
-    <meta name="description" content="agancy ">
+    <meta name="description" content="agency ">
 
     <title>MDub Design - Home page </title>
     <!-- fonts -->
@@ -27,7 +27,7 @@
     <header id="navBar">
         <nav class=" align-items-center  ">
             <div class="logo">
-                <a class="navbar--logo fw-bolder fs-5 mainColor" href="#">Navbar</a>
+                <a class="navbar--logo fw-bolder fs-5 mainColor" href="#">MDub IT</a>
             </div>
             <div id="LinksList" class="Links--list ">
                 <a class="link" href="index.html">Home</a>
@@ -52,11 +52,11 @@
             <div class="row align-items-center   ">
                 <div class="col-lg-7 col-sm-12" data-aos="fade-right" data-aos-duration="400">
                     <div class="item--main  ">
-                        <h1 class="main--title">Experienced <span class="mainColor">mobile and web</span> applications
-                            and website builders measuring.</h1>
-                        <p class="  mb-3">KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
-                            applications and website builders measuring dozens of completed projects. We build and
-                            develop mobile applications for several top platforms, including Android & IOS. </p>
+                        <h1 class="main--title">Experienced <span class="mainColor">Mobile and Web</span> developers
+                            at the touch of a button.</h1>
+                        <p class="  mb-3">MDub IT is a team of experienced mobile, and web
+                            developers with a broad range of skill sets. We strive to
+                            build a better, more inclusive web. </p>
                         <a href="#" class="buttom btn1 mainBg text-white me-2">Contact us</a>
                         <a href="#" class="buttom btn1 bg-white">View more</a>
                     </div>
@@ -84,7 +84,7 @@
                         </div>
                         <div class="content">
                             <h5 class="small m-0 fw-bold    ">SEO</h5>
-                            <p class="small m-0 text-muted">Lorem Ipsum is simply</p>
+                            <p class="small m-0 text-muted">Optimize your ranking on google.com</p>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="content">
                             <h5 class="small m-0 fw-bold    ">AR/VR Solutions</h5>
-                            <p class="small m-0 text-muted">Lorem Ipsum is simply</p>
+                            <p class="small m-0 text-muted">The web/world of tomorrow</p>
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="content">
                             <h5 class="small m-0 fw-bold    ">Mobile Applications</h5>
-                            <p class="small m-0 text-muted">Lorem Ipsum is simply</p>
+                            <p class="small m-0 text-muted">IOS & Android Mobile Platforms</p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         </div>
                         <div class="content">
                             <h5 class="small m-0 fw-bold    ">Web Application</h5>
-                            <p class="small m-0 text-muted">Lorem Ipsum is simply</p>
+                            <p class="small m-0 text-muted">Anything and everything on the web</p>
                         </div>
                     </div>
                 </div>
