Update to main page style and info

--- a/index.html
+++ b/index.html
@@ -128,15 +128,11 @@
 
     <section class=" mockup--section mt-5 overflow-hidden ">
         <div class="py-1 text-center container mb-4" data-aos="zoom-in" data-aos-duration="500">
-            <h3 class="neroColor fw-bold mockup--h3">Superior Web Design Represents
-                Your Company and Grows Your Business </h3>
+            <h3 class="neroColor fw-bold mockup--h3">Revolutionize Your Online Presence: Unleash the Power of Exceptional Web Design! </h3>
             <p class="mockup--p">
-
-                In today’s digital world, it is crucial to stay connected with your customers and prospects to leverage new markets and expand your business. Statistics show that approximately 4.57 billion people worldwide are active internet users, comprising 59 percent of the global population. Within this online community, 53 percent perform research before connecting with a brand to ensure they are making the right decision.
-                
-                A study from Episerver also found that 92 percent of consumers visit a brand’s website with multiple intentions other than buying.
-                
-                These include product/service research, comparison shopping and business review. This data proves consumers do not purchase on impulse.
+                Connect with your customers and expand your business in the digital world. With billions of active 
+                internet users globally, make sure your web design captivates and engages. Research shows consumers 
+                are informed and deliberate, visiting websites for more than just purchases.
                 </p>
         </div>
 
@@ -147,12 +143,13 @@
                     <h3 class="mockup--title neroColor"><span class="mainColor">Digital Footprint </span> starts with your website.</h3>
                                             <p class=" py-1 lh-lg">
 
-                        Your website is the backbone of your business. It supports all your company’s digital marketing efforts and serves as your primary customer touchpoint. A responsive, custom eCommerce website design gives online users a clear idea of your brand offerings, unique value propositions and core values.
-                        </br>
-                        According to a report released by the eCommerce Foundation, 88 percent of U.S. consumers perform online research before making a purchase or visiting a local store. Without a professional custom website design, online shoppers can get easily frustrated. This results in an increased bounce rate, poor online reputation and lower conversion rate.
-                    </br>
-                        Don’t let this be the case for your business. Ensure your target customers can find and navigate your website with ease. Invest in a responsive, well-designed and informative website to improve your brand’s profitability and success.
-                        . </p>
+                                                Unlock the Digital Powerhouse for Your Business! Your website isn't just a pretty face—it's the heart 
+                                                and soul of your online presence. With a custom eCommerce website design that's both responsive and 
+                                                captivating, you'll wow online users with your brand's unique offerings, values, and more. Research 
+                                                shows that 88% of U.S. consumers turn to the web before making a purchase or visiting a local store, 
+                                                so don't let them get lost in a frustrating digital maze. Invest in a user-friendly, visually stunning
+                                                 website that boosts your brand's reputation, conversion rates, and profitability. Let's build your 
+                                                 online success story together!"</p>
                 </div>
                 <div class="col-lg-6 col-md-10  position-relative text-end " data-aos="fade-left"
                     data-aos-duration="500">
