--- a/index.html
+++ b/index.html
@@ -57,10 +57,31 @@
                         <p class="  mb-3">MDub IT is a team of experienced mobile, and web
                             developers with a broad range of skill sets. We strive to
                             build a better, more inclusive web. </p>
-                        <a href="#" class="buttom btn1 mainBg text-white me-2">Contact us</a>
-                        <a href="#" class="buttom btn1 bg-white">View more</a>
+                            <button type="button" class="buttom btn1 mainBg text-white me-2" data-toggle="modal" data-target="#exampleModalCenter">
+                                Launch demo modal
+                              </button>
+                        <a href="#" class="buttom btn1 bg-white">Book a call</a>
                     </div>
-
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
                 </div>
                 <div class="col-lg-5  d-none d-lg-block  " data-aos="fade-left" data-aos-duration="400">
                     <div class="item2--main ">
@@ -128,7 +149,7 @@
 
     <section class=" mockup--section mt-5 overflow-hidden ">
         <div class="py-1 text-center container mb-4" data-aos="zoom-in" data-aos-duration="500">
-            <h3 class="neroColor fw-bold mockup--h3">Revolutionize Your Online Presence: Unleash the Power of Exceptional Web Design! </h3>
+            <h3 class="neroColor fw-bold mockup--h3">Revolutionize Your Online Presence: Unleash the Power of Web Design! </h3>
             <p class="mockup--p">
                 Connect with your customers and expand your business in the digital world. With billions of active 
                 internet users globally, make sure your web design captivates and engages. Research shows consumers 
@@ -140,7 +161,7 @@
             <div class="row  align-items-center">
                 <div class="col-lg-6  " data-aos="fade-right" data-aos-duration="400">
                     
-                    <h3 class="mockup--title neroColor"><span class="mainColor">Digital Footprint </span> starts with your website.</h3>
+                    <h3 class="mockup--title neroColor"> Your <span class="mainColor">Digital Footprint </span> starts with your website.</h3>
                                             <p class=" py-1 lh-lg">
 
                                                 Unlock the Digital Powerhouse for Your Business! Your website isn't just a pretty face—it's the heart 
