test for data attribute on modal

--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
                         <p class="  mb-3">MDub IT is a team of experienced mobile, and web
                             developers with a broad range of skill sets. We strive to
                             build a better, more inclusive web. </p>
-                            <button type="button" class="buttom btn1 mainBg text-white me-2" data-toggle="modal" data-target="#exampleModalCenter">
-                                Launch demo modal
-                              </button>
+                            
+                        <a href="#exampleModalCenter" class="buttom btn1 mainBg text-white me-2">Build a Quote</a>
                         <a href="#" class="buttom btn1 bg-white">Book a call</a>
                     </div>
 <!-- Modal -->
