update to modal trigger

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
                         <p class="  mb-3">MDub IT is a team of experienced mobile, and web
                             developers with a broad range of skill sets. We strive to
                             build a better, more inclusive web. </p>
-                            
-                        <a href="#exampleModalCenter" class="buttom btn1 mainBg text-white me-2">Build a Quote</a>
+                            <button class="buttom btn1 mainBg text-white me-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Launch demo modal
+                              </button>   
                         <a href="#" class="buttom btn1 bg-white">Book a call</a>
                     </div>
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
